apps/capacitor/ingress/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: capacitor-ingress-policy
  namespace: flux-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: capacitor
  policyTypes:
  - Ingress
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: tailscale
    ports:
    - protocol: TCP
      port: 9000
